# feel-xrf-analyzer

./: autodetect.html  index.html  package-lock.json  package.json  vite.config.ts
src/: ADPreview.tsx  App.css  App.tsx  ColorMaps.tsx  RefCard.tsx  Sample.tsx  SampleCard.tsx  autodetect.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: autodetect.rs  lib.rs  main.rs
